Add generic listing view

--- a/home/templates/home/listing_list.html
+++ b/home/templates/home/listing_list.html
@@ -12,7 +12,7 @@
     <h1>Posts list</h1>
     {% for listing in object_list %}
     <h2>{{listing.title}}</h2>
-    <p>{{listing.excerpt}}</p>
+    <p>{{listing.stall_price}}</p>
     <p>Author: {{listing.author}}</p>
     {% endfor %}
 </body>
