--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -52,8 +52,17 @@
     {% if is_paginated %}
     <nav aria-label="Page navigation" class="page-list">
         <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li>
+                <a href="?page={{ page_obj.previous_page_number }}"
+                    class="button">&laquo; PREV</a>
+            </li>
+            {% endif %}
             {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="button"> NEXT &raquo;</a></li>
+            <li>
+                <a href="?page={{ page_obj.next_page_number }}" 
+                class="button"> NEXT &raquo;</a>
+            </li>
             {% endif %}
         </ul>
     </nav>
