--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 <body class="d-flex flex-column h-100 main-bg">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">BookMarket</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -44,9 +44,6 @@
                     </li>
 
                 </ul>
-                <span class="navbar-text text-muted">
-                    Hello
-                </span>
             </div>
         </div>
     </nav>
