Add image to base.html and style it

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,13 @@
             </div>
         </div>
     </nav>
+    <div class="col-12 slogan">
+        <h1>Your One-Stop Spot</h1>
+        <h2>For Seamless Market Stall Bookings!</h2>
+    </div>
     <div class="row-12">
         <img src= "{% static 'images/pexels-mew-wy-4072329.jpg' %}" class="main-image" alt="market stall">
+        <img src= "{% static 'images/pexels-julia-volk-6118897.jpg' %}" class="main-image2" alt="market stall">
     </div>
 
     <main class="flex-shrink-0 main-bg">
