--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,73 @@ footer {
 }
 
 .main-image {
-    max-width: 100px;
-    max-height: 100px;
+    width: 100%;
+    height: 100%;
 }
+
+.main-image2{
+    display: none;
+ }
+
+.slogan {
+    background-color: rgba(75, 75, 75, 0.699);
+    padding: 10px 0px 10px 10%;
+    position: absolute;
+    margin-top: 20%;
+    color:#fff;
+}
+
+.slogan h1 {
+    font-size: 72px;
+}
+
+/* media max-width 480px */
+@media only screen and (max-width: 480px){ 
+    .main-image{
+      display: none;
+    }
+ 
+    .main-image2{
+      display: block;
+      max-width: 100%;
+      max-height: 100%;
+    }
+ }
+
+@media (max-width: 480px) {
+    .slogan {
+        font-weight: 300;
+        padding-left: 10px;
+        margin-top: 60%;
+    }
+    .slogan h1 {
+        font-size: 32px;
+    }
+
+    .slogan h2 {
+        font-size: 20px;
+    }
+    .main-image {
+        width: 100%;
+        height: 350px;
+    }
+    .main_container h1 {
+        font-size: 24px;
+    }
+    .main_container p {
+        font-size: 12px;
+    }
+    .price {
+        margin-top: 5px;
+    }
+    .price h2 {
+        font-size: 24px;
+    }
+    .price p {
+        font-size: 10px;
+    }
+    .button {
+        margin-top: 0%;
+    }
+}
+
