--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,6 +19,10 @@ body {
     text-decoration: none;
     color: black;
 }
+
+.listing-link:hover {
+    color:green;
+}
 .price {
     margin-top: 10px;
     text-align: right;
@@ -125,6 +129,9 @@ footer {
     font-size: 72px;
 }
 
+.detail {
+    display: flex;
+}
 /* media max-width 480px */
 @media only screen and (max-width: 480px){ 
     .main-image{
