Add location field to listing model

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,7 +25,7 @@
                         <p>{{ listing.market_date }}</p>
                     </div>
                     <div class="col">
-                        <p>Location</p>
+                        <p>{{ listing.location }}</p>
                     </div>
                 </div>
              </div>
