--- a/home/templates/home/listing_detail.html
+++ b/home/templates/home/listing_detail.html
@@ -21,7 +21,7 @@
                         <h1>{{ listing.title }}</h1>
                         <hr>
                     </div>
-                    <div class="row">Location</div>
+                    <div class="row">{{ listing.location }}</div>
                     <div class="row detail-time-date">
                         <div class="col">
                             <h2>Start at:</h2>
