--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
 
 .main_container {
     margin-top: 5%;
-    background-color: rgba(0, 0, 0, 0.027);
+    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, 0.15);
 }
 
 .main_container h1 {
@@ -178,15 +178,6 @@ footer {
     font-size: 72px;
 }
 
-.detail {
-    margin-bottom: 5%;
-    margin-top: 2%;
-    display: flex;
-    justify-content: center;
-    background-color: #2929292d;
-    padding-top: 50px;
-}
-
 .temrs-conditions {
     font-size: 10px;
     margin-top: 20px;
@@ -208,6 +199,16 @@ footer {
     background-color: red;
 }
 
+.detail {
+    margin-bottom: 5%;
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, 0.15);
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
 .detail-title {
     text-align: center;
 }
@@ -223,6 +224,11 @@ footer {
 
 .detail-price {
     text-align: right;
+}
+
+.card {
+    border: none;
+    background-color: transparent;
 }
 /* media max-width 480px */
 @media only screen and (max-width: 480px){ 
