--- a/home/templates/home/listing_detail.html
+++ b/home/templates/home/listing_detail.html
@@ -61,48 +61,45 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12">
+        <div class="col">
           <strong class="num-comments">
             <i class="far fa-comments"></i> {{ comment_count }}
           </strong>
         </div>
-        <div class="col-12">
-          <hr>
-        </div>
       </div>
-    <div class="row">
-        <div class="row">
-            <div class="row comments">
-                <h2>Comments:</h2>
-            </div>
-            <div class="mt-3 d-flex flex-row align-items-center p-3 form-color"><input type="text" class="form-control" placeholder="Enter your comment..."> </div>
-            <div class="row">
-                <div class="col-md-8 card mb-4  mt-3 ">
-                  <div class="card-body">
-                    {% for comment in comments %}
-                    <div class="p-2 comments{% if not comment.approved and comment.author == user %}
-                      faded{% elif not comment.approved %} d-none{% endif %}">
-                      <p class="font-weight-bold">
-                        {{ comment.author }}
-                      </p>
-                      <div id="comment{{ comment.id }}">
-                        {{ comment.body | linebreaks }}
-                      </div>
-                      <span class="font-weight-normal">
-                        {{ comment.created_on }}
-                      </span>
-                      {% if not comment.approved and comment.author == user %}
-                      <p class="approval">
-                        This comment is awaiting approval
-                      </p>
-                      {% endif %}
-                    </div>
-                    {% endfor %}
-                  </div>
-                </div>
-              </div>
+    <!-- Displaying Comments -->
+  <div class="row comment">
+    <div class="col-md-8 card mb-4  mt-3 ">
+      <h3>Comments:</h3>
+      {% for comment in comments %}
+      <div class="card-body">
+        <!-- We want a for loop inside the empty control tags
+          to iterate through each comment in comments -->
+        <div class="p-2 comments
+          {% if not comment.approved and comment.author == user %}
+          faded{% elif not comment.approved %} d-none{% endif %}">
+          <p class="author">
+            {{ comment.author }}
+          </p>
+          <div id="comment{{ comment.id }}">
+            {{ comment.body | linebreaks }}
+          </div>
+          <hr>
+          <span class="created-on-comment">
+            {{ comment.created_on }}
+          </span>
+          {% if not comment.approved and comment.author == user %}
+          <hr>
+          <p class="approval">
+            This comment is not yet approved
+          </p>
+          {% endif %}
         </div>
+        <!-- Our for loop ends here -->
+      </div>
+      {% endfor %}
     </div>
+  </div>
 </div>
 
 {% endblock content %}
