Made detail listing more responsive

--- a/home/templates/home/listing_detail.html
+++ b/home/templates/home/listing_detail.html
@@ -4,19 +4,19 @@
 
 <div class="container-fluid">
     <div class="row detail">
-        <div class="col-2 listing-description">
+        <div class="col-lg-2 md-12 listing-description">
             <div class="row listing-description">
                 <h1>Description:</h1>
                 <hr>
                 <p>{{ listing.description }}</p>
             </div>
         </div>
-        <div class="col-6">
-            <div class="row">
-                <div class="col listing-image">
+        <div class="col-lg-6 md-12">
+            <div class="row detail-direction">
+                <div class="col-lg-6 md-12 bg-warning">
                     <a href="">{{ listing.image }}</a>
                 </div>
-                <div class="col">
+                <div class="col-lg-6 md-12">
                     <div class="row detail-title">
                         <h1>{{ listing.title }}</h1>
                         <hr>
