--- a/home/templates/home/listing_detail.html
+++ b/home/templates/home/listing_detail.html
@@ -8,7 +8,7 @@
             <div class="row listing-description">
                 <h1>Description:</h1>
                 <hr>
-                <p>{{ listing.description }}</p>
+                {{ listing.description | safe}}
             </div>
         </div>
         <div class="col-lg-6 md-12">
@@ -21,7 +21,7 @@
                         <h1>{{ listing.title }}</h1>
                         <hr>
                     </div>
-                    <div class="row">{{ listing.location }}</div>
+                    <div class="row location">{{ listing.location }}</div>
                     <div class="row detail-time-date">
                         <div class="col">
                             <h2>Start at:</h2>
@@ -77,7 +77,7 @@
           to iterate through each comment in comments -->
         <div class="p-2 comments
           {% if not comment.approved and comment.author == user %}
-          faded{% elif not comment.approved %} d-none{% endif %}">
+          faded {% elif not comment.approved %} d-none{% endif %}">
           <p class="author">
             {{ comment.author }}
           </p>
