--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,12 @@ body {
     color: black;
 }
 
+.user-log {
+    color:#fff;
+    margin-top: 3%;
+    position: absolute;
+}
+
 .listing-link:hover {
     color:green;
 }
@@ -347,6 +353,25 @@ footer {
 .btn-signup:hover {
     box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
 }
+
+.welcome {
+    margin-top: 2%;
+    padding: 10px;
+    text-align: center;
+    font-weight: 600;
+    color: aliceblue;
+    background-color: rgb(44, 42, 53); ;
+    box-shadow: rgba(51, 51, 51, 0.568) 0 6px 12px;
+}
+
+.sign-up-form {
+    font-weight: 500;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    padding: 20px;
+    box-shadow: rgba(51, 51, 51, 0.068) 0 6px 12px;
+}
+
 /* media max-width 480px */
 @media only screen and (max-width: 480px){ 
     .main-image{
@@ -359,8 +384,12 @@ footer {
       max-height: 100%;
     }
  }
-
 @media (max-width: 480px) {
+    .user-log {
+        font-weight: 500;
+        background-color: rgba(61, 61, 61, 0.363);
+        margin-top: 150%;
+    }
     .slogan {
         font-weight: 300;
         padding-left: 10px;
