--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-
+{% block image %}
+{% endblock image %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock head_title %}
