--- a/home/templates/home/listing_detail.html
+++ b/home/templates/home/listing_detail.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %} 
 {% block content %}
 {% load static %}
+{% load crispy_forms_tags %}
 
+{% block image %}
+{% endblock image %}
 <div class="container-fluid">
     <div class="row detail">
         <div class="col-lg-2 md-12 listing-description">
             <div class="row listing-description">
                 <h1>Description:</h1>
                 <hr>
-                {{ listing.description | safe}}
+                <p>{{ listing.description | safe}}</p>
             </div>
         </div>
         <div class="col-lg-6 md-12">
@@ -67,14 +70,29 @@
           </strong>
         </div>
       </div>
+      <hr>
     <!-- Displaying Comments -->
+    <div class="col-md-6 card mb-4 mt-3 form">
+      <div class="card-body">
+        {% if user.is_authenticated %}
+        <h3>Leave a comment:</h3>
+        <p class="comment-user">{{ user.username }}</p>
+        <form id="commentForm" method="post">
+          {{ comment_form | crispy }}
+          {% csrf_token %}
+          <button id="submitButton" type="submit"
+            class="btn btn-signup btn-lg">Submit</button>
+        </form>
+        {% else %}
+        <p>If you want to comment on this listing please: <a class="link" href="{{ signup_url }}">sign up</a></p>
+        {% endif %}
+      </div>
+    </div>
   <div class="row comment">
-    <div class="col-md-8 card mb-4  mt-3 ">
+    <div class="col-md-12 card mb-4  mt-3 ">
       <h3>Comments:</h3>
       {% for comment in comments %}
       <div class="card-body">
-        <!-- We want a for loop inside the empty control tags
-          to iterate through each comment in comments -->
         <div class="p-2 comments
           {% if not comment.approved and comment.author == user %}
           faded {% elif not comment.approved %} d-none{% endif %}">
@@ -95,7 +113,6 @@
           </p>
           {% endif %}
         </div>
-        <!-- Our for loop ends here -->
       </div>
       {% endfor %}
     </div>
