--- a/home/templates/home/listing_detail.html
+++ b/home/templates/home/listing_detail.html
@@ -18,11 +18,11 @@
             <div class="row detail-direction">
                   {% if listing.image %}
                     <div class="col-lg-6 md-12">
-                      <img src= "{{ listing.image.url }}" class="listing-img" alt="">
+                      <img src= "{{ listing.image.url }}" class="listing-detail-img" alt="">
                     </div>
                   {% else %}
                     <div class="col-lg-6 md-12">
-                      <img src= "{% static 'images/pexels-julia-volk-6118897.jpg' %}" class="listing-img" alt="market stall">
+                      <img src= "{% static 'images/pexels-julia-volk-6118897.jpg' %}" class="listing-detail-img" alt="market stall">
                     </div>
                   {% endif %}
                 <div class="col-lg-6 md-12">
@@ -60,7 +60,9 @@
             </div>
             <div class="row">
                 <div class="col">
+                  <a href="#">
                     <button type="button" class="reserve-button">Reserve</button>
+                  </a>
                 </div>
                 <div class="col detail-price">
                     <h2>{{ listing.stall_price }}</h2>
@@ -77,7 +79,20 @@
         </div>
       </div>
       <hr>
-    <!-- Displaying Comments -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible
+              fade show" id="msg" role="alert">
+              {{ message | safe }}
+              <button type="button" class="btn-close"
+                data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
     <div class="col-md-6 card mb-4 mt-3 form">
       <div class="card-body">
         {% if user.is_authenticated %}
